refactor - ajustes na paginação de empréstimos e cache